M16-FinalProject/src/cpl.output
Grammar

    0 $accept: program $end

    1 program: declarations stmt_block

    2 declarations: declarations declaration
    3             | ε

    4 declaration: idlist ':' type ';'

    5 type: INT
    6     | FLOAT

    7 idlist: idlist ',' ID
    8       | ID

    9 stmt: assignment_stmt
   10     | input_stmt
   11     | output_stmt
   12     | if_stmt
   13     | while_stmt
   14     | switch_stmt
   15     | break_stmt
   16     | stmt_block

   17 assignment_stmt: ID '=' expression ';'

   18 input_stmt: INPUT '(' ID ')' ';'

   19 output_stmt: OUTPUT '(' expression ')' ';'

   20 @1: ε

   21 $@2: ε

   22 if_stmt: IF '(' boolexpr ')' @1 stmt ELSE $@2 stmt

   23 @3: ε

   24 @4: ε

   25 while_stmt: WHILE @3 '(' boolexpr ')' @4 stmt

   26 @5: ε

   27 $@6: ε

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 caselist DEFAULT ':' $@6 stmtlist '}'

   29 $@7: ε

   30 caselist: caselist CASE NUM ':' $@7 stmtlist
   31         | ε

   32 break_stmt: BREAK ';'

   33 stmt_block: '{' stmtlist '}'

   34 stmtlist: stmtlist stmt
   35         | ε

   36 boolexpr: boolexpr OR boolterm
   37         | boolterm

   38 boolterm: boolterm AND boolfactor
   39         | boolfactor

   40 boolfactor: NOT '(' boolexpr ')'
   41           | expression RELOP expression

   42 expression: expression ADDOP term
   43           | term

   44 term: term MULOP factor
   45     | factor

   46 factor: '(' expression ')'
   47       | CAST '(' expression ')'
   48       | ID
   49       | NUM


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 19 22 25 28 40 46 47
    ')' (41) 18 19 22 25 28 40 46 47
    ',' (44) 7
    ':' (58) 4 28 30
    ';' (59) 4 17 18 19 32
    '=' (61) 17
    '{' (123) 28 33
    '}' (125) 28 33
    error (256)
    ID <name> (258) 7 8 17 18 48
    NUM <num_val> (259) 30 49
    BREAK (260) 32
    CASE (261) 30
    DEFAULT (262) 28
    ELSE (263) 22
    FLOAT (264) 6
    IF (265) 22
    INPUT (266) 18
    INT (267) 5
    OUTPUT (268) 19
    SWITCH (269) 28
    WHILE (270) 25
    RELOP <op> (271) 41
    ADDOP <op> (272) 42
    MULOP <op> (273) 44
    OR (274) 36
    AND (275) 38
    NOT (276) 40
    CAST <cast_type> (277) 47


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program (32)
        on left: 1
        on right: 0
    declarations (33)
        on left: 2 3
        on right: 1 2
    declaration (34)
        on left: 4
        on right: 2
    type <type_val> (35)
        on left: 5 6
        on right: 4
    idlist (36)
        on left: 7 8
        on right: 4 7
    stmt (37)
        on left: 9 10 11 12 13 14 15 16
        on right: 22 25 34
    assignment_stmt (38)
        on left: 17
        on right: 9
    input_stmt (39)
        on left: 18
        on right: 10
    output_stmt (40)
        on left: 19
        on right: 11
    if_stmt (41)
        on left: 22
        on right: 12
    @1 (42)
        on left: 20
        on right: 22
    $@2 (43)
        on left: 21
        on right: 22
    while_stmt (44)
        on left: 25
        on right: 13
    @3 (45)
        on left: 23
        on right: 25
    @4 (46)
        on left: 24
        on right: 25
    switch_stmt (47)
        on left: 28
        on right: 14
    @5 (48)
        on left: 26
        on right: 28
    $@6 (49)
        on left: 27
        on right: 28
    caselist (50)
        on left: 30 31
        on right: 28 30
    $@7 (51)
        on left: 29
        on right: 30
    break_stmt (52)
        on left: 32
        on right: 15
    stmt_block (53)
        on left: 33
        on right: 1 16
    stmtlist (54)
        on left: 34 35
        on right: 28 30 33 34
    boolexpr <expr_val> (55)
        on left: 36 37
        on right: 22 25 36 40
    boolterm <expr_val> (56)
        on left: 38 39
        on right: 36 37 38
    boolfactor <expr_val> (57)
        on left: 40 41
        on right: 38 39
    expression <expr_val> (58)
        on left: 42 43
        on right: 17 19 28 41 42 46 47
    term <expr_val> (59)
        on left: 44 45
        on right: 42 43 44
    factor <expr_val> (60)
        on left: 46 47 48 49
        on right: 44 45


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (declarations)

    program       go to state 1
    declarations  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: declarations • stmt_block
    2 declarations: declarations • declaration

    ID   shift, and go to state 4
    '{'  shift, and go to state 5

    declaration  go to state 6
    idlist       go to state 7
    stmt_block   go to state 8


State 3

    0 $accept: program $end •

    $default  accept


State 4

    8 idlist: ID •

    $default  reduce using rule 8 (idlist)


State 5

   33 stmt_block: '{' • stmtlist '}'

    $default  reduce using rule 35 (stmtlist)

    stmtlist  go to state 9


State 6

    2 declarations: declarations declaration •

    $default  reduce using rule 2 (declarations)


State 7

    4 declaration: idlist • ':' type ';'
    7 idlist: idlist • ',' ID

    ':'  shift, and go to state 10
    ','  shift, and go to state 11


State 8

    1 program: declarations stmt_block •

    $default  reduce using rule 1 (program)


State 9

   33 stmt_block: '{' stmtlist • '}'
   34 stmtlist: stmtlist • stmt

    ID      shift, and go to state 12
    BREAK   shift, and go to state 13
    IF      shift, and go to state 14
    INPUT   shift, and go to state 15
    OUTPUT  shift, and go to state 16
    SWITCH  shift, and go to state 17
    WHILE   shift, and go to state 18
    '{'     shift, and go to state 5
    '}'     shift, and go to state 19

    stmt             go to state 20
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


State 10

    4 declaration: idlist ':' • type ';'

    FLOAT  shift, and go to state 29
    INT    shift, and go to state 30

    type  go to state 31


State 11

    7 idlist: idlist ',' • ID

    ID  shift, and go to state 32


State 12

   17 assignment_stmt: ID • '=' expression ';'

    '='  shift, and go to state 33


State 13

   32 break_stmt: BREAK • ';'

    ';'  shift, and go to state 34


State 14

   22 if_stmt: IF • '(' boolexpr ')' @1 stmt ELSE $@2 stmt

    '('  shift, and go to state 35


State 15

   18 input_stmt: INPUT • '(' ID ')' ';'

    '('  shift, and go to state 36


State 16

   19 output_stmt: OUTPUT • '(' expression ')' ';'

    '('  shift, and go to state 37


State 17

   28 switch_stmt: SWITCH • '(' expression ')' '{' @5 caselist DEFAULT ':' $@6 stmtlist '}'

    '('  shift, and go to state 38


State 18

   25 while_stmt: WHILE • @3 '(' boolexpr ')' @4 stmt

    $default  reduce using rule 23 (@3)

    @3  go to state 39


State 19

   33 stmt_block: '{' stmtlist '}' •

    $default  reduce using rule 33 (stmt_block)


State 20

   34 stmtlist: stmtlist stmt •

    $default  reduce using rule 34 (stmtlist)


State 21

    9 stmt: assignment_stmt •

    $default  reduce using rule 9 (stmt)


State 22

   10 stmt: input_stmt •

    $default  reduce using rule 10 (stmt)


State 23

   11 stmt: output_stmt •

    $default  reduce using rule 11 (stmt)


State 24

   12 stmt: if_stmt •

    $default  reduce using rule 12 (stmt)


State 25

   13 stmt: while_stmt •

    $default  reduce using rule 13 (stmt)


State 26

   14 stmt: switch_stmt •

    $default  reduce using rule 14 (stmt)


State 27

   15 stmt: break_stmt •

    $default  reduce using rule 15 (stmt)


State 28

   16 stmt: stmt_block •

    $default  reduce using rule 16 (stmt)


State 29

    6 type: FLOAT •

    $default  reduce using rule 6 (type)


State 30

    5 type: INT •

    $default  reduce using rule 5 (type)


State 31

    4 declaration: idlist ':' type • ';'

    ';'  shift, and go to state 40


State 32

    7 idlist: idlist ',' ID •

    $default  reduce using rule 7 (idlist)


State 33

   17 assignment_stmt: ID '=' • expression ';'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 45
    term        go to state 46
    factor      go to state 47


State 34

   32 break_stmt: BREAK ';' •

    $default  reduce using rule 32 (break_stmt)


State 35

   22 if_stmt: IF '(' • boolexpr ')' @1 stmt ELSE $@2 stmt

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 48
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolexpr    go to state 49
    boolterm    go to state 50
    boolfactor  go to state 51
    expression  go to state 52
    term        go to state 46
    factor      go to state 47


State 36

   18 input_stmt: INPUT '(' • ID ')' ';'

    ID  shift, and go to state 53


State 37

   19 output_stmt: OUTPUT '(' • expression ')' ';'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 54
    term        go to state 46
    factor      go to state 47


State 38

   28 switch_stmt: SWITCH '(' • expression ')' '{' @5 caselist DEFAULT ':' $@6 stmtlist '}'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 55
    term        go to state 46
    factor      go to state 47


State 39

   25 while_stmt: WHILE @3 • '(' boolexpr ')' @4 stmt

    '('  shift, and go to state 56


State 40

    4 declaration: idlist ':' type ';' •

    $default  reduce using rule 4 (declaration)


State 41

   48 factor: ID •

    $default  reduce using rule 48 (factor)


State 42

   49 factor: NUM •

    $default  reduce using rule 49 (factor)


State 43

   47 factor: CAST • '(' expression ')'

    '('  shift, and go to state 57


State 44

   46 factor: '(' • expression ')'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 58
    term        go to state 46
    factor      go to state 47


State 45

   17 assignment_stmt: ID '=' expression • ';'
   42 expression: expression • ADDOP term

    ADDOP  shift, and go to state 59
    ';'    shift, and go to state 60


State 46

   43 expression: term •
   44 term: term • MULOP factor

    MULOP  shift, and go to state 61

    $default  reduce using rule 43 (expression)


State 47

   45 term: factor •

    $default  reduce using rule 45 (term)


State 48

   40 boolfactor: NOT • '(' boolexpr ')'

    '('  shift, and go to state 62


State 49

   22 if_stmt: IF '(' boolexpr • ')' @1 stmt ELSE $@2 stmt
   36 boolexpr: boolexpr • OR boolterm

    OR   shift, and go to state 63
    ')'  shift, and go to state 64


State 50

   37 boolexpr: boolterm •
   38 boolterm: boolterm • AND boolfactor

    AND  shift, and go to state 65

    $default  reduce using rule 37 (boolexpr)


State 51

   39 boolterm: boolfactor •

    $default  reduce using rule 39 (boolterm)


State 52

   41 boolfactor: expression • RELOP expression
   42 expression: expression • ADDOP term

    RELOP  shift, and go to state 66
    ADDOP  shift, and go to state 59


State 53

   18 input_stmt: INPUT '(' ID • ')' ';'

    ')'  shift, and go to state 67


State 54

   19 output_stmt: OUTPUT '(' expression • ')' ';'
   42 expression: expression • ADDOP term

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 68


State 55

   28 switch_stmt: SWITCH '(' expression • ')' '{' @5 caselist DEFAULT ':' $@6 stmtlist '}'
   42 expression: expression • ADDOP term

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 69


State 56

   25 while_stmt: WHILE @3 '(' • boolexpr ')' @4 stmt

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 48
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolexpr    go to state 70
    boolterm    go to state 50
    boolfactor  go to state 51
    expression  go to state 52
    term        go to state 46
    factor      go to state 47


State 57

   47 factor: CAST '(' • expression ')'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 71
    term        go to state 46
    factor      go to state 47


State 58

   42 expression: expression • ADDOP term
   46 factor: '(' expression • ')'

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 72


State 59

   42 expression: expression ADDOP • term

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    term    go to state 73
    factor  go to state 47


State 60

   17 assignment_stmt: ID '=' expression ';' •

    $default  reduce using rule 17 (assignment_stmt)


State 61

   44 term: term MULOP • factor

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    factor  go to state 74


State 62

   40 boolfactor: NOT '(' • boolexpr ')'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 48
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolexpr    go to state 75
    boolterm    go to state 50
    boolfactor  go to state 51
    expression  go to state 52
    term        go to state 46
    factor      go to state 47


State 63

   36 boolexpr: boolexpr OR • boolterm

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 48
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolterm    go to state 76
    boolfactor  go to state 51
    expression  go to state 52
    term        go to state 46
    factor      go to state 47


State 64

   22 if_stmt: IF '(' boolexpr ')' • @1 stmt ELSE $@2 stmt

    $default  reduce using rule 20 (@1)

    @1  go to state 77


State 65

   38 boolterm: boolterm AND • boolfactor

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 48
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolfactor  go to state 78
    expression  go to state 52
    term        go to state 46
    factor      go to state 47


State 66

   41 boolfactor: expression RELOP • expression

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 79
    term        go to state 46
    factor      go to state 47


State 67

   18 input_stmt: INPUT '(' ID ')' • ';'

    ';'  shift, and go to state 80


State 68

   19 output_stmt: OUTPUT '(' expression ')' • ';'

    ';'  shift, and go to state 81


State 69

   28 switch_stmt: SWITCH '(' expression ')' • '{' @5 caselist DEFAULT ':' $@6 stmtlist '}'

    '{'  shift, and go to state 82


State 70

   25 while_stmt: WHILE @3 '(' boolexpr • ')' @4 stmt
   36 boolexpr: boolexpr • OR boolterm

    OR   shift, and go to state 63
    ')'  shift, and go to state 83


State 71

   42 expression: expression • ADDOP term
   47 factor: CAST '(' expression • ')'

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 84


State 72

   46 factor: '(' expression ')' •

    $default  reduce using rule 46 (factor)


State 73

   42 expression: expression ADDOP term •
   44 term: term • MULOP factor

    MULOP  shift, and go to state 61

    $default  reduce using rule 42 (expression)


State 74

   44 term: term MULOP factor •

    $default  reduce using rule 44 (term)


State 75

   36 boolexpr: boolexpr • OR boolterm
   40 boolfactor: NOT '(' boolexpr • ')'

    OR   shift, and go to state 63
    ')'  shift, and go to state 85


State 76

   36 boolexpr: boolexpr OR boolterm •
   38 boolterm: boolterm • AND boolfactor

    AND  shift, and go to state 65

    $default  reduce using rule 36 (boolexpr)


State 77

   22 if_stmt: IF '(' boolexpr ')' @1 • stmt ELSE $@2 stmt

    ID      shift, and go to state 12
    BREAK   shift, and go to state 13
    IF      shift, and go to state 14
    INPUT   shift, and go to state 15
    OUTPUT  shift, and go to state 16
    SWITCH  shift, and go to state 17
    WHILE   shift, and go to state 18
    '{'     shift, and go to state 5

    stmt             go to state 86
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


State 78

   38 boolterm: boolterm AND boolfactor •

    $default  reduce using rule 38 (boolterm)


State 79

   41 boolfactor: expression RELOP expression •
   42 expression: expression • ADDOP term

    ADDOP  shift, and go to state 59

    $default  reduce using rule 41 (boolfactor)


State 80

   18 input_stmt: INPUT '(' ID ')' ';' •

    $default  reduce using rule 18 (input_stmt)


State 81

   19 output_stmt: OUTPUT '(' expression ')' ';' •

    $default  reduce using rule 19 (output_stmt)


State 82

   28 switch_stmt: SWITCH '(' expression ')' '{' • @5 caselist DEFAULT ':' $@6 stmtlist '}'

    $default  reduce using rule 26 (@5)

    @5  go to state 87


State 83

   25 while_stmt: WHILE @3 '(' boolexpr ')' • @4 stmt

    $default  reduce using rule 24 (@4)

    @4  go to state 88


State 84

   47 factor: CAST '(' expression ')' •

    $default  reduce using rule 47 (factor)


State 85

   40 boolfactor: NOT '(' boolexpr ')' •

    $default  reduce using rule 40 (boolfactor)


State 86

   22 if_stmt: IF '(' boolexpr ')' @1 stmt • ELSE $@2 stmt

    ELSE  shift, and go to state 89


State 87

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 • caselist DEFAULT ':' $@6 stmtlist '}'

    $default  reduce using rule 31 (caselist)

    caselist  go to state 90


State 88

   25 while_stmt: WHILE @3 '(' boolexpr ')' @4 • stmt

    ID      shift, and go to state 12
    BREAK   shift, and go to state 13
    IF      shift, and go to state 14
    INPUT   shift, and go to state 15
    OUTPUT  shift, and go to state 16
    SWITCH  shift, and go to state 17
    WHILE   shift, and go to state 18
    '{'     shift, and go to state 5

    stmt             go to state 91
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


State 89

   22 if_stmt: IF '(' boolexpr ')' @1 stmt ELSE • $@2 stmt

    $default  reduce using rule 21 ($@2)

    $@2  go to state 92


State 90

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 caselist • DEFAULT ':' $@6 stmtlist '}'
   30 caselist: caselist • CASE NUM ':' $@7 stmtlist

    CASE     shift, and go to state 93
    DEFAULT  shift, and go to state 94


State 91

   25 while_stmt: WHILE @3 '(' boolexpr ')' @4 stmt •

    $default  reduce using rule 25 (while_stmt)


State 92

   22 if_stmt: IF '(' boolexpr ')' @1 stmt ELSE $@2 • stmt

    ID      shift, and go to state 12
    BREAK   shift, and go to state 13
    IF      shift, and go to state 14
    INPUT   shift, and go to state 15
    OUTPUT  shift, and go to state 16
    SWITCH  shift, and go to state 17
    WHILE   shift, and go to state 18
    '{'     shift, and go to state 5

    stmt             go to state 95
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


State 93

   30 caselist: caselist CASE • NUM ':' $@7 stmtlist

    NUM  shift, and go to state 96


State 94

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 caselist DEFAULT • ':' $@6 stmtlist '}'

    ':'  shift, and go to state 97


State 95

   22 if_stmt: IF '(' boolexpr ')' @1 stmt ELSE $@2 stmt •

    $default  reduce using rule 22 (if_stmt)


State 96

   30 caselist: caselist CASE NUM • ':' $@7 stmtlist

    ':'  shift, and go to state 98


State 97

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 caselist DEFAULT ':' • $@6 stmtlist '}'

    $default  reduce using rule 27 ($@6)

    $@6  go to state 99


State 98

   30 caselist: caselist CASE NUM ':' • $@7 stmtlist

    $default  reduce using rule 29 ($@7)

    $@7  go to state 100


State 99

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 caselist DEFAULT ':' $@6 • stmtlist '}'

    $default  reduce using rule 35 (stmtlist)

    stmtlist  go to state 101


State 100

   30 caselist: caselist CASE NUM ':' $@7 • stmtlist

    $default  reduce using rule 35 (stmtlist)

    stmtlist  go to state 102


State 101

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 caselist DEFAULT ':' $@6 stmtlist • '}'
   34 stmtlist: stmtlist • stmt

    ID      shift, and go to state 12
    BREAK   shift, and go to state 13
    IF      shift, and go to state 14
    INPUT   shift, and go to state 15
    OUTPUT  shift, and go to state 16
    SWITCH  shift, and go to state 17
    WHILE   shift, and go to state 18
    '{'     shift, and go to state 5
    '}'     shift, and go to state 103

    stmt             go to state 20
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


State 102

   30 caselist: caselist CASE NUM ':' $@7 stmtlist •
   34 stmtlist: stmtlist • stmt

    ID      shift, and go to state 12
    BREAK   shift, and go to state 13
    IF      shift, and go to state 14
    INPUT   shift, and go to state 15
    OUTPUT  shift, and go to state 16
    SWITCH  shift, and go to state 17
    WHILE   shift, and go to state 18
    '{'     shift, and go to state 5

    $default  reduce using rule 30 (caselist)

    stmt             go to state 20
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


State 103

   28 switch_stmt: SWITCH '(' expression ')' '{' @5 caselist DEFAULT ':' $@6 stmtlist '}' •

    $default  reduce using rule 28 (switch_stmt)
